# TripAdvisor

./: .gitignore  README.md  build.gradle  package-lock.json  settings.gradle
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy-to-s3.yaml
backend/: Dockerfile  README.md  alembic.ini  constants.py  database.py  dtos.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  requirements2.txt  settings.py  supervisord.conf  test_main.py  utils.py
backend/alembic/: env.py  utils.py
backend/alembic/versions/: 05296995831b_initial_migration.py  1c940714f70a_init.py  34ef10e15ce2_add_locations.py  5c4b5cd1d99a_init.py  6421abfd613c_init.py  7ff1f8cbd511_init.py  e8f71c078869_add_festivals.py  ffc8f9228ed4_set_activity_nullable.py
backend/es/: documents.py
backend/scripts/: deploy.sh  upload_to_es.py
backend/services/: __init__.py  chat.py  day_plan.py  festival.py  gpt.py  plan.py  restaurant.py  search.py  skyscanner.py
backend/src/main/java/com/tripper/Tripper/: TripperApplication.java
backend/src/main/java/com/tripper/Tripper/controller/: ChatController.java
backend/src/main/resources/: application.properties
backend/trip/: pyvenv.cfg
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  ChatButton.jsx  MainContent.jsx  ModifiedIndex.css  NavBar.jsx  NavBar.module.css  SideBar.css  SideBar.jsx  Sidebar.module.css  Test.jsx  TestApp.jsx  index.css  main.jsx  test.jsx
frontend/src/Components/: AccommodationPlan.jsx  (+45 more)
(+19 files in other folders)
